VS-3842 FIX (Overflow) Prevent horizontal scroll bars above 320px

--- a/frontend/src/styles/_global-styles.scss
+++ b/frontend/src/styles/_global-styles.scss
@@ -9,6 +9,10 @@
 body {
     font-size: $font-size-body;
 
+    @media only screen and (min-width: $max-overflow-width) {
+        overflow-x: hidden;
+    }
+
     @include media-breakpoint-up(md) {
         font-size: $font-size-body-md;
     }
